capture the stderr and stdout and storing in the variable and checking that with grep if there is error grep will return empty which will satisfy the condition of relevant files not found and other stages will not run and add set +e to not immediately exit the shell on error

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,10 +25,12 @@ jobs:
       - name: Check for relevant file changes
         id: check-changes
         run: |
+          set +e
           # Use git diff to find changes between the previous commit and the current one.
           # The grep command filters for the file extensions you specified.
           # The result is saved as a step output, which can be used in other jobs.
-          changed_files=$(git diff --name-only  HEAD^ ${{ github.sha }} | grep -E '\.js$|\.json$|\.yml$|\.lock$|\..*rc$')
+          # capture the error and show it the output
+          changed_files=$(git diff --name-only  HEAD^ ${{ github.sha }} 2>&1 | grep -E '\.js$|\.json$|\.yml$|\.lock$|\..*rc$')
           echo $changed_files output
           if [ -n "$changed_files" ]; then
             echo "Relevant files have been changed."
