added rules to build stage because gitlab requires rules to decide to show which jobs to run on trigger event if there is no rules then by default job gets to run but if the job is dependent on previous job which has rules then this throws error as gitlab has no idea whether to show the job to run or no

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -83,11 +83,13 @@ lint_and_test:
 
 build:
   stage: build
+  needs:
+    - lint_and_test
+  rules:
+    - if: '$HAS_RELEVANT_FILE_CHANGES == "true"'
   script:
     - yarn install
     - yarn build
-  needs:
-    - lint_and_test
 
   # save the build artifacts ('dist' folder) so they can pass to the publish stage
   artifacts:
