--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -76,6 +76,8 @@ lint_and_test:
     - check_for_relevant_files
   rules:
     - if: '$HAS_RELEVANT_FILE_CHANGES == "true"'
+      when: on_success
+    - when: never
   script:
     - yarn install
     - yarn lint
@@ -87,6 +89,8 @@ build:
     - lint_and_test
   rules:
     - if: '$HAS_RELEVANT_FILE_CHANGES == "true"'
+      when: on_success
+    - when: never
   script:
     - yarn install
     - yarn build
