substituted multiline cat command instead of echo include:\n so that i can write multiline formatted commands easily

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -40,11 +40,16 @@ check_for_relevant_files:
       echo "output of diff: $CHANGED "
       if [ -z "$CHANGED" ]; then
         echo "No relevant changes found. Generating empty pipeline."
-        echo "include:\n  - local: '.gitlab/child-empty.yml'" > .gitlab/pipeline-config.yml 
+        cat <<EOF > .gitlab/pipeline-config.yml
+        include:
+          - local: '.gitlab/child-empty.yml'
+        EOF
       else
         echo "Found relevant changes: $CHANGED"
-        echo "include:\n  - local: '.gitlab/child-full.yml'" > .gitlab/pipeline-config.yml
-
+        cat <<EOF > .gitlab/pipeline-config.yml
+        include:
+          - local: '.gitlab/child-full.yml'
+        EOF
       fi
   # using artifacts:reports:dotenv to pass environment variable to the subsequent job as signal to start or stop subsequent jobs
   artifacts:
