--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,18 +26,18 @@ check_for_relevant_files:
   stage: check
   script:
     - apk add --no-cache git # since we are using git command in the script so install git here
-    - chmod +x .gitlab/generate-pipeline.sh
-    - .gitlab/generate-pipeline.sh
+    - chmod +x ./.gitlab/generate-pipeline.sh
+    - ./.gitlab/generate-pipeline.sh
   # using artifacts:reports:dotenv to pass environment variable to the subsequent job as signal to start or stop subsequent jobs
   artifacts:
     paths:
-      - .gitlab/pipeline-config.yml
+      - ./.gitlab/pipeline-config.yml
     expire_in: 10 minutes
 # https://docs.gitlab.com/ci/pipelines/downstream_pipelines/#trigger-a-dynamic-child-pipeline
 trigger_child_pipeline:
   stage: trigger
   trigger:
     include:
-      - artifact: .gitlab/pipeline-config.yml
+      - artifact: ./.gitlab/pipeline-config.yml
         job: check_for_relevant_files
     strategy: depend
