--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,6 +25,14 @@ stages:
 check_for_relevant_files:
   stage: check
   script:
+    - echo "Listing root directory:"
+    - pwd
+    - ls -l
+    - echo "Listing .gitlab directory:"
+    - ls -l .gitlab || echo ".gitlab folder not found"
+    - echo "Listing .gitlab/ directory:"
+    - ls -l ./gitlab || echo "./gitlab folder not found"
+    - echo "Listing ./gitlab/ directory:"
     - apk add --no-cache git # since we are using git command in the script so install git here
     - chmod +x ./.gitlab/generate-pipeline.sh
     - ./.gitlab/generate-pipeline.sh
