--- a/.gitlab/ci-full.yml
+++ b/.gitlab/ci-full.yml
@@ -18,6 +18,11 @@ stages:
 
 lint_and_test:
   stage: test
+  rules:
+    - if: '$CI_PIPELINE_SOURCE == "parent_pipeline"'
+      when: on_success
+    - when: never
+
   script:
     - echo "This was triggered by $CI_PIPELINE_SOURCE"
     - yarn install
@@ -28,6 +33,11 @@ build:
   stage: build
   needs:
     - lint_and_test
+  rules:
+    - if: '$CI_PIPELINE_SOURCE == "parent_pipeline"'
+      when: on_success
+    - when: never
+
   script:
     - yarn install
     - yarn build
@@ -50,5 +60,7 @@ release:
   needs:
     - build
   rules:
-    - if: '$CI_COMMIT_TAG =~ /^v[0-9]+\.[0-9]+\.[0-9]-gitlabci\.[0-9]+$/'
+    - if:
+        '$CI_COMMIT_TAG =~ /^v[0-9]+\.[0-9]+\.[0-9]-gitlabci\.[0-9]+$/ &&
+        $CI_PIPELINE_SOURCE == "parent_pipeline"'
       when: on_success
