added lightweight docker images to alpine gitlab-ci.yml and busybox ci-empty.yml

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,5 @@
 # docker image to use for all jobs
-image: node:18-alpine
+image: alpine:latest
 
 # set workflow rules for all the stages, exit the workflow if rules don't match
 workflow:
