--- a/.gitlab/ci-full.yml
+++ b/.gitlab/ci-full.yml
@@ -1,15 +1,15 @@
 image: node:18-alpine
 
-default:
-  # global cache for node_modules directory
-  # cache key is based on yarn.lock file.
-  # this ensures cache is only recreated if a dependency is added,updated, or removed
-  cache:
-    key:
-      files:
-        - yarn.lock
-    paths:
-      - node_modules/
+# default:
+#   # global cache for node_modules directory
+#   # cache key is based on yarn.lock file.
+#   # this ensures cache is only recreated if a dependency is added,updated, or removed
+#   cache:
+#     key:
+#       files:
+#         - yarn.lock
+#     paths:
+#       - node_modules/
 stages:
   - test
   - build
@@ -23,7 +23,6 @@ lint_and_test:
     - when: never
 
   script:
-    - echo "This was triggered by $CI_PIPELINE_SOURCE"
     - yarn install --frozen-lockfile
     - yarn lint
     - yarn test
@@ -36,6 +35,12 @@ lint_and_test:
         coverage_format: cobertura
         path: coverage/clover.xml
     expire_in: 1 day
+  cache:
+    key:
+      files:
+        - yarn.lock
+    paths:
+      - node_modules/
 
 build:
   stage: build
@@ -56,7 +61,13 @@ build:
     paths:
       - dist/
     expire_in: 1 week
-
+  cache:
+    key:
+      files:
+        - yarn.lock
+    paths:
+      - node_modules/
+    policy: pull
 release:
   stage: release
   script:
