--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,9 +24,11 @@ stages:
 # This job explicitly checks for file changes and fails if none found
 check_for_relevant_files:
   stage: check
-  script:
+  before_script:
     - apk add --no-cache git # since we are using git command in the script so install git here
     - chmod +x .gitlab/generate-pipeline.sh
+
+  script:
     - sh .gitlab/generate-pipeline.sh
   # using artifacts:reports:dotenv to pass environment variable to the subsequent job as signal to start or stop subsequent jobs
   artifacts:
