put needs in the ci-full.yml since needs change and is not specific to the template of the respective files

--- a/.gitlab/child-pipeline/ci-full.yml
+++ b/.gitlab/child-pipeline/ci-full.yml
@@ -30,11 +30,16 @@ lint_and_test:
     <<: *cache_common
 
 build:
+  needs:
+    - job: lint_and_test
+      artifacts: false # don't download lint_and_test artifacts
   cache:
     <<: *cache_common
     policy: pull
 
 release:
+  needs:
+    - build
   cache:
     <<: *cache_common
     policy: pull
