created action.yml file for test_and_build and publish to keep the routine steps of setup install and run inside those action file

--- a/.github/workflows/test_and_build.yml
+++ b/.github/workflows/test_and_build.yml
@@ -8,29 +8,4 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '18'
-          cache: 'yarn'
-
-      - name: Install dependencies
-        run: yarn install
-
-      - name: Lint
-        run: yarn lint
-
-      - name: Test
-        run: yarn test
-
-      - name: Build
-        run: yarn build
-
-      - name: Upload build artifacts (dist/)
-        uses: actions/upload-artifact@v4
-        with:
-          name: dist
-          path: dist/
+      - uses: ./.github/actions/test_and_build
