--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -8,24 +8,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '18'
-          registry-url: 'https://registry.npmjs.org/'
-
-      - name: Install dependencies
-        run: yarn install --ignore-scripts
-
-      - name: Download build artifacts (dist/)
-        uses: actions/download-artifact@v4
-        with:
-          name: dist
-          path: dist/
-
+      - uses: ./.github/actions/publish/
       - name: Publish to npm
         run: npm publish
         env:
