github action can't access without checking out code so putting checkout code out of the action.yml files

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -8,6 +8,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
       - uses: ./.github/actions/publish/
       - name: Publish to npm
         run: npm publish
