--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,4 +25,5 @@ jobs:
     needs: test-and-build
     if: startswith(github.ref, 'refs/tags/v') # only on version tags
     uses: ./.github/workflows/publish.yml
-    secrets: inherit
+    secrets:
+      NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
