added checkout and attaching workspace as pre-steps

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -55,3 +55,7 @@ workflows:
           filters:
             tags:
               only: /^v\d+\.\d+\.\d+-circleci\.\d+$/
+          pre-steps:
+            - checkout
+            - attach_workspace:
+                at: .
