--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,11 +8,32 @@ setup: true
 orbs:
   path-filtering: circleci/path-filtering@2.0.2
 
+executors:
+  default-executor:
+    docker:
+      - image: busybox:latest # Or any image with bash & coreutils
+
+jobs:
+  generate-config:
+    executor: default-executor
+    steps:
+      - checkout
+      - run:
+          name: Generate config_continued.yml
+          command: sh .circleci/preprocessor.sh
+
+      - persist_to_workspace:
+          root: .
+          paths:
+            - .circleci/config_continued.yml
+
 # the setup workflow that runs first on everypipeline
 workflows:
   path-filtering-setup:
     jobs:
+      - generate-config
       - path-filtering/filter:
+          requires: [generate-config]
           # Use this pipeline variable to compare against the previous commit
           # on the current branch that triggered the pipeline
 
@@ -29,3 +50,10 @@ workflows:
           filters:
             tags:
               only: /^v\d+\.\d+\.\d+-circleci\.\d+$/
+          workspace_path: .
+          # https://circleci.com/developer/orbs/orb/circleci/path-filtering
+          # checkout: false
+          # pre-steps:
+          #   - checkout
+          #   - attach_workspace:
+          #       at: .
