--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,27 +13,27 @@ executors:
     docker:
       - image: busybox:latest # Or any image with bash & coreutils
 
-jobs:
-  generate-config:
-    executor: default-executor
-    steps:
-      - checkout
-      - run:
-          name: Generate config_continued.yml
-          command: sh .circleci/preprocessor.sh
+# jobs:
+#   generate-config:
+#     executor: default-executor
+#     steps:
+#       - checkout
+#       - run:
+#           name: Generate config_continued.yml
+#           command: sh .circleci/preprocessor.sh
 
-      - persist_to_workspace:
-          root: .
-          paths:
-            - .circleci/config_continued.yml
+#       - persist_to_workspace:
+#           root: .
+#           paths:
+#             - .circleci/config_continued.yml
 
 # the setup workflow that runs first on everypipeline
 workflows:
   path-filtering-setup:
     jobs:
-      - generate-config
+      # - generate-config
       - path-filtering/filter:
-          requires: [generate-config]
+          # requires: [generate-config]
           # Use this pipeline variable to compare against the previous commit
           # on the current branch that triggered the pipeline
 
