--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,9 +11,18 @@ orbs:
 executors:
   default-executor:
     docker:
-      - image: busybox:latest # Or any image with bash & coreutils
+      - image: alpine:latest
 
 jobs:
+  install-git-ssh:
+    executor: default-executor
+    steps:
+      - run:
+          name: Install Git and SSH
+          command: |
+            apk add --no-cache git openssh
+      - run: git --version
+      - run: ssh -V
   generate-config:
     executor: default-executor
     steps:
@@ -31,9 +40,12 @@ jobs:
 workflows:
   path-filtering-setup:
     jobs:
+      - install-git-ssh
       - generate-config
       - path-filtering/filter:
-          requires: [generate-config]
+          requires:
+            - install-git-ssh
+            - generate-config
           # Use this pipeline variable to compare against the previous commit
           # on the current branch that triggered the pipeline
 
